--- a/style.css
+++ b/style.css
@@ -12,3 +12,11 @@
     width: 525px;
     height: 30px;
 }
+
+.delbtn{
+    border-radius: 20px;
+        background-color: red;
+        font-weight: bold;
+        margin-left: 10px;
+        margin-bottom: 2px;
+}
