--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
         height: 35px;
         border-radius: 20px;
         font-weight: bold;
+        cursor: pointer;
 }
 .in{
     width: 525px;
@@ -19,4 +20,5 @@
         font-weight: bold;
         margin-left: 10px;
         margin-bottom: 2px;
+        cursor: pointer;
 }
